# calculator

./: .gitignore  README.md  __init__.py  __main__.py  pyproject.toml  requirements.txt
src/calculator/: __init__.py  __main__.py  basic.py  scientific.py  validator.py
src/calculator/gui/: logic.py  main_window.py
