[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator"
version = "0.1.0"
description = "calculator package"
requires-python = ">=3.10"

[project.scripts]
calculator = "calculator.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]